chair z-index bug fixed x2

--- a/src/assets/styles/views/_TableView.scss
+++ b/src/assets/styles/views/_TableView.scss
@@ -1,4 +1,5 @@
 .table-view {
+  position: relative;
   padding: 44px 24px;
   display: flex;
   align-items: center;
@@ -122,7 +123,7 @@
     }
 
     .users {
-        padding-bottom: 8px;
+      padding-bottom: 8px;
       .user-preview {
         height: 72px;
         display: flex;
@@ -131,10 +132,10 @@
         padding: 0 4px;
         gap: 16px;
         font-size: 14px;
-        color: #28293D;
+        color: #28293d;
 
         .first-name {
-        font-family: poppins-semi-bold;
+          font-family: poppins-semi-bold;
         }
 
         .profile-img {
